networking/gateway-api-external-access/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kw-gateway-access
  labels:
    pod-security.kubernetes.io/enforce: restricted
